changes and deletions

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
 
     <div class = "content">
       <div class = "artist" style="display:none">
-        
         <p>I am the technical director and vice-president of Corpus Callosum, the premiere art and technology student organization at the University of Southern California. I have been a part of it since Fall 2016 and have exhibited projects ranging from LED origami to motion-based interactive displays.</p>
-
         <div id="artistCarousel" class="carousel slide" data-ride="carousel">
-          
+
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target = "#artistCarousel" data-slide-to = "0" class = "active"></li>
@@ -75,15 +73,17 @@
             <span class = "sr-only">Next</span>
           </a>
         </div>
+      </div>
+      <div class = "hacker" style="display:none">
+        <p>I have participated in six diffferent hackathons, creating both hardware and software based projects. For examples and documentation, feel free to check out my github!</p>
+      </div>
+      <div class = "student" style="display:none">
+        <p>I am a junior at the University of Southern California majoring in biomedical engineering with an emphasis in electrical engineering and a pre-health concentration. I do research on retinal implants with the Biomedical Microsystems Laboratory under Professor Ellis Meng. I am also an active member of the Alpha Omega Epsilon engineering sorority.</p>
+      </div>
 
-      <p class = "hacker" style="display:none">Jib crow's nest bilge rat case shot Sink me avast clipper Plate Fleet lookout spirits. Overhaul clipper crimp tack broadside parrel Sail ho crack Jennys tea cup prow Blimey. Tender code of conduct chandler dead men tell no tales gabion main sheet Letter of Marque Plate Fleet dance the hempen jig gally. Landlubber or just lubber aft measured fer yer chains black spot chase Jack Ketch bilge Spanish Main reef sails cutlass. Hempen halter keelhaul swing the lead shrouds Privateer draft scallywag aft jolly boat topgallant. Barque warp boom cable splice the main brace parrel Arr swab list crow's nest. Tack pressgang pink provost Pieces of Eight wherry doubloon ballast boatswain overhaul. Pressgang take a caulk swing the lead Pieces of Eight overhaul bilge water brigantine smartly Jolly Roger scallywag.
-      </p>
-
-      <p class = "student" style="display:none">Lorem ipsum dolor amet hoodie YOLO forage try-hard gochujang williamsburg. Pok pok gentrify master cleanse, occupy readymade typewriter hell of lumbersexual deep v nostrud asymmetrical cliche twee. Poutine pickled neutra cornhole est. Ugh labore poutine, pitchfork cred artisan cloud bread 8-bit ex wolf four loko coloring book four dollar toast. Literally swag chillwave, wolf nisi ethical jianbing pour-over occupy selvage cloud bread lorem you probably haven't heard of them pug pabst.
-      </p>
-
-      <p class = "engineer" style="display:none">White sit to go espresso, variety, robust caramelization extraction steamed decaffeinated, robusta extraction percolator coffee foam cinnamon whipped. Con panna, organic, extra organic a, cinnamon coffee, a, aroma siphon eu white carajillo, eu aged caramelization carajillo flavour. Robust grinder, frappuccino java, rich filter qui steamed in, café au lait cortado eu robust americano. Variety organic coffee extraction, foam spoon, cup cortado, latte french press to go qui barista, frappuccino aftertaste redeye fair trade spoon milk body froth as saucer. Variety coffee cinnamon mocha organic cortado, wings half and half crema body roast dripper, cultivar, crema aromatic java espresso eu coffee latte. Single shot kopi-luwak mazagran froth redeye latte percolator so turkish sweet mocha cinnamon et seasonal.White sit to go espresso, variety, robust caramelization extraction steamed decaffeinated, robusta extraction percolator coffee foam cinnamon whipped. Con panna, organic, extra organic a, cinnamon coffee, a, aroma siphon eu white carajillo, eu aged caramelization carajillo flavour. Robust grinder, frappuccino java, rich filter qui steamed in, café au lait cortado eu robust americano. Variety organic coffee extraction, foam spoon, cup cortado, latte french press to go qui barista, frappuccino aftertaste redeye fair trade spoon milk body froth as saucer. Variety coffee cinnamon mocha organic cortado, wings half and half crema body roast dripper, cultivar, crema aromatic java espresso eu coffee latte. Single shot kopi-luwak mazagran froth redeye latte percolator so turkish sweet mocha cinnamon et seasonal.White sit to go espresso, variety, robust caramelization extraction steamed decaffeinated, robusta extraction percolator coffee foam cinnamon whipped. Con panna, organic, extra organic a, cinnamon coffee, a, aroma siphon eu white carajillo, eu aged caramelization carajillo flavour. Robust grinder, frappuccino java, rich filter qui steamed in, café au lait cortado eu robust americano. Variety organic coffee extraction, foam spoon, cup cortado, latte french press to go qui barista, frappuccino aftertaste redeye fair trade spoon milk body froth as saucer. Variety coffee cinnamon mocha organic cortado, wings half and half crema body roast dripper, cultivar, crema aromatic java espresso eu coffee latte. Single shot kopi-luwak mazagran froth redeye latte percolator so turkish sweet mocha cinnamon et seasonal.White sit to go espresso, variety, robust caramelization extraction steamed decaffeinated, robusta extraction percolator coffee foam cinnamon whipped. Con panna, organic, extra organic a, cinnamon coffee, a, aroma siphon eu white carajillo, eu aged caramelization carajillo flavour. Robust grinder, frappuccino java, rich filter qui steamed in, café au lait cortado eu robust americano. Variety organic coffee extraction, foam spoon, cup cortado, latte french press to go qui barista, frappuccino aftertaste redeye fair trade spoon milk body froth as saucer. Variety coffee cinnamon mocha organic cortado, wings half and half crema body roast dripper, cultivar, crema aromatic java espresso eu coffee latte. Single shot kopi-luwak mazagran froth redeye latte percolator so turkish sweet mocha cinnamon et seasonal.White sit to go espresso, variety, robust caramelization extraction steamed decaffeinated, robusta extraction percolator coffee foam cinnamon whipped. Con panna, organic, extra organic a, cinnamon coffee, a, aroma siphon eu white carajillo, eu aged caramelization carajillo flavour. Robust grinder, frappuccino java, rich filter qui steamed in, café au lait cortado eu robust americano. Variety organic coffee extraction, foam spoon, cup cortado, latte french press to go qui barista, frappuccino aftertaste redeye fair trade spoon milk body froth as saucer. Variety coffee cinnamon mocha organic cortado, wings half and half crema body roast dripper, cultivar, crema aromatic java espresso eu coffee latte. Single shot kopi-luwak mazagran froth redeye latte percolator so turkish sweet mocha cinnamon et seasonal.
-      </p>
+      <div class = "engineer" style="display:none">
+        <p></p>
+      </div>
 
       </div>
     </div>
