--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
         <div id="artistCarousel" class="carousel slide" data-ride="carousel">
 
           <!-- Indicators -->
-          <ol class="carousel-indicators">
+          <ol class="carousel-indicators" data-interval="10000">
             <li data-target = "#artistCarousel" data-slide-to = "0" class = "active"></li>
             <li data-target = "#artistCarousel" data-slide-to = "1"></li>
             <li data-target = "#artistCarousel" data-slide-to = "2"></li>
             <li data-target = "#artistCarousel" data-slide-to = "3"></li>
           </ol>
-          
+
           <!-- Wrapper for slides -->
           <div class = "carousel-inner">
             <div class = "item active">
-              <img src = "airbending.jpg" alt="airbending">
+              <image src = "airbending.jpg" alt="airbending">
             </div>
 
             <div class = "item">
-              <img src = "lightning.jpg" alt="lightning">
+              <video autoplay loop>
+              <source src = "CocaSpringDemo.mp4" alt="airbending" type="video/mp4">
+            </video>
             </div>
 
             <div class= "item">
