Added video controls

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class = "item">
-              <video autoplay loop>
+              <video autoplay loop controls="controls">
               <source src = "CocaSpringDemo.mp4" alt="airbending" type="video/mp4">
             </video>
             </div>
